--- a/views/contact.pug
+++ b/views/contact.pug
@@ -14,7 +14,7 @@ block content
     .main.main-raised
         .row.text-center
           .col-sm-12
-            section.category.u-mb-large
+            section.category.mb6
               .container
                 .row
                   .col-xs-12.col-md-8.col-md-offset-2
