--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -6,9 +6,9 @@ footer.footer
         br
         span Made by #[a(href="https://github.com/switowski" target="_blank") switowski] using #[a(href="https://www.creative-tim.com/product/material-kit/?affiliate_id=93857" target="_blank") Material Kit] and #[a(href="http://www.freepik.com/free-vector/rocket-flying-out-of-the-monitor_765338.htm" target="_blank") Rocket image by freepik]
       .social-icons.pull-right
-        a.social-share.btn.btn-simple.u-px-small(href="http://twitter.com/share?url=https://deploystack.io&amp;text=DeployStack: curated list of tools for launching websites&amp;hashtags=deploystack" target="_blank" title="Twitter share")
+        a.social-share.btn.btn-simple.ph2(href="http://twitter.com/share?url=https://deploystack.io&amp;text=DeployStack: curated list of tools for launching websites&amp;hashtags=deploystack" target="_blank" title="Twitter share")
           i.fa.fa-twitter
-        a.social-share.btn.btn-simple.u-px-small(href="http://www.facebook.com/sharer.php?u=https://deploystack.io" target="_blank" title="Facebook share")
+        a.social-share.btn.btn-simple.ph2(href="http://www.facebook.com/sharer.php?u=https://deploystack.io" target="_blank" title="Facebook share")
           i.fa.fa-facebook
-        a.social-share.btn.btn-simple.u-px-small(href="https://plus.google.com/share?url=https://deploystack.io" target="_blank" title="Google Plus share")
+        a.social-share.btn.btn-simple.ph2(href="https://plus.google.com/share?url=https://deploystack.io" target="_blank" title="Google Plus share")
           i.fa.fa-google-plus
