--- a/views/includes/home/cdn-table.pug
+++ b/views/includes/home/cdn-table.pug
@@ -1,15 +1,15 @@
 mixin cdn77-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.cdn77.com/?utm_source=deploystack&utm_campaign=bonus-signup&utm_medium=affiliate") Open CDN77
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.cdn77.com/?utm_source=deploystack&utm_campaign=bonus-signup&utm_medium=affiliate") Open CDN77
 mixin amazon-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://aws.amazon.com/cloudfront/") Open CloudFront
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://aws.amazon.com/cloudfront/") Open CloudFront
 mixin maxcdn-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.maxcdn.com/") Open MaxCDN
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.maxcdn.com/") Open MaxCDN
 mixin cloudflare-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.cloudflare.com/") Open Cloudflare
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.cloudflare.com/") Open Cloudflare
 //- Coupon codes modal buttons
 mixin cdn77-coupon
   button.btn.btn-sm.btn-info(type="button", data-toggle="modal", data-target="#cdn77-coupon", aria-label="CDN77 discount")
-    span.u-bold Up to 43% sign-up bonus &nbsp;
+    span.b Up to 43% sign-up bonus &nbsp;
       i.material-icons help
 
 .card.card-nav-tabs.card-plain
