--- a/views/includes/home/ci-table.pug
+++ b/views/includes/home/ci-table.pug
@@ -1,13 +1,13 @@
 mixin codeship-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://codeship.com/") Open Codeship
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://codeship.com/") Open Codeship
 mixin circleci-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://circleci.com/") Open CircleCI
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://circleci.com/") Open CircleCI
 mixin travis-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://travis-ci.com/") Open Travis
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://travis-ci.com/") Open Travis
 mixin jenkins
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://jenkins.io/") Open Jenkins
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://jenkins.io/") Open Jenkins
 mixin gocd
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.gocd.io/") Open GoCD
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.gocd.io/") Open GoCD
 
 .card.card-nav-tabs.card-plain
   .header.header-primary
