--- a/views/includes/home/cloud-computing.pug
+++ b/views/includes/home/cloud-computing.pug
@@ -1,11 +1,11 @@
 mixin aws-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://aws.amazon.com/") Open AWS
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://aws.amazon.com/") Open AWS
 mixin gcp-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://cloud.google.com/") Open Google Cloud
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://cloud.google.com/") Open Google Cloud
 mixin azure-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://azure.microsoft.com/en-us/") Open Azure
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://azure.microsoft.com/en-us/") Open Azure
 
-.row.u-mt-medium.u-mb-medium
+.row.mt4.mb4
   .col-xs-12.col-sm-4
     .card.price.price-card--350
       ul
