--- a/views/includes/home/errors-table.pug
+++ b/views/includes/home/errors-table.pug
@@ -1,13 +1,13 @@
 mixin sentry-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://sentry.io/welcome/?utm_source=deploystack") Open Sentry
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://sentry.io/welcome/?utm_source=deploystack") Open Sentry
 mixin rollbar-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://rollbar.com/") Open Rollbar
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://rollbar.com/") Open Rollbar
 mixin airbrake-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://airbrake.io/") Open Airbrake
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://airbrake.io/") Open Airbrake
 //- mixin raygun-signup
-//-   a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://raygun.com/") Open Raygun
+//-   a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://raygun.com/") Open Raygun
 
-.row.u-mt-medium.u-mb-medium
+.row.mt4.mb4
   .col-xs-12.col-sm-4
     .card.price.price-card--500
       ul
