--- a/views/includes/home/files-storage-table.pug
+++ b/views/includes/home/files-storage-table.pug
@@ -1,9 +1,9 @@
 //- No affiliate
 mixin amazon-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://portal.aws.amazon.com/gp/aws/developer/registration/index.html") Open Amazon
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://portal.aws.amazon.com/gp/aws/developer/registration/index.html") Open Amazon
 
 .row
-  .col-xs-12.u-mt-medium
+  .col-xs-12.mt4
     .card.price
       ul.price--wider
         li.price__header.no-border Amazon S3
