--- a/views/includes/home/monitoring-table.pug
+++ b/views/includes/home/monitoring-table.pug
@@ -1,10 +1,10 @@
 mixin uptimerobot-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://uptimerobot.com?ref=195296") Open Uptime Robot
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://uptimerobot.com?ref=195296") Open Uptime Robot
 mixin statuscake-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://www.statuscake.com/") Open StatusCake
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.statuscake.com/") Open StatusCake
 
 //- TODO: remove price-hosting classes if that won't break the styling
-#domain-price.row.u-mt-medium.u-mb-medium
+#domain-price.row.mt4.mb4
   .col-xs-12.col-sm-4.col-sm-offset-2
     .card.price.price-hosting
       ul
