--- a/views/includes/home/vc-table.pug
+++ b/views/includes/home/vc-table.pug
@@ -1,11 +1,11 @@
 mixin github-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://github.com") Open GitHub
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://github.com") Open GitHub
 mixin gitlab-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://about.gitlab.com/") Open GitLab
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://about.gitlab.com/") Open GitLab
 mixin bitbucket-signup
-  a.btn.btn-primary.u-bold(rel="nofollow" target="_blank", href="https://bitbucket.org/product") Open Bitbucket
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://bitbucket.org/product") Open Bitbucket
 
-.row.u-mt-medium.u-mb-medium
+.row.mt4.mb4
   .col-xs-12.col-sm-4
     .card.price.price-card--400
       ul
