--- a/views/includes/signup.pug
+++ b/views/includes/signup.pug
@@ -12,4 +12,4 @@
             div(style="position: absolute; left: -5000px;" aria-hidden="true")
               input(type="text" name="b_416fc32caca9fd4416f05307a_114f7b0b26" tabindex="-1" value="")
         .col-sm-4
-          button#mc-embedded-subscribe.btn.btn-primary.btn-block.u-bold.u-no-margin(type="submit" value="Subscribe" name="subscribe") Subscribe
+          button#mc-embedded-subscribe.btn.btn-primary.btn-block.b.ma0(type="submit" value="Subscribe" name="subscribe") Subscribe
