--- a/views/faq.pug
+++ b/views/faq.pug
@@ -30,7 +30,7 @@ block content
         .container
           section.row
             .col-sm-12
-              a.js-faq-expand-all.btn.u-mt-large.pull-right(href="#" onclick="return false;") Expand all
+              a.js-faq-expand-all.btn.mt6.pull-right(href="#" onclick="return false;") Expand all
           section.row
             .col-sm-12
               a.anchor--hidden#general
@@ -62,7 +62,7 @@ block content
                     | You are wrong about XXXXX company/plan/service!
                   +accordion-body('general-wrong')
                     p Hmmm, you are probably right. Since all the data is curated by hand, some information might be outdated. Please #[a(href="/contact") let me know] and I will try to fix it as soon as possible. Also let me know if you think that I should describe some other services/companies.
-          section.row.u-mt-medium
+          section.row.mt4
             .col-sm-12
               h3#hosting Hosting
               .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
@@ -91,7 +91,7 @@ block content
                   +accordion-body('hosting-recommendation')
                     p If I would like to test a hobby project and could still use the Amazon free tier, then I would go for that. It's a good opportunity to get familiar with AWS infrastructure and be ready to use it for bigger projects. If the free tier is not possible and I'm fine with Heroku's Platform as a Service model, then I would go for this solution. Deploying is easy and the free plan is free forever (I sometimes find projects that have not been updated since a long time, but they still run on Heroku).
                     p If you decide to pay some money for the hosting (or you simply can't use any of the free solutions) both DigitalOcean and Linode offer equally great services and you can't go wrong choosing either of them.
-          section.row.u-mt-medium.u-mb-large
+          section.row.mt4.mb6
             .col-sm-12
               h3#domain Domain
               .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
@@ -114,7 +114,7 @@ block content
                   +accordion-body('domain-recommendation')
                     p When it comes to what type of domain you should choose - in 99% of cases you will be fine with #[strong .com]. It's a standard for most websites and it will allow you to avoid any kind of confusion (people will pay more attention to the website's name, not the extension, when they try to remember it, so they might automatically assume that it ends with .com). However, in some cases getting a custom domain extension might help you to distinguish yourself from others: .pizza for a pizzeria or .museum for a museum can have a very good effect.
                     p When it comes to companies - not always cheaper is better. Some companies will offer you a cheap first year but then next years will be quite expensive and moving your domain to a different company will be a hassle. If you want to validate an idea for a project, then it's fine to choose anything cheap like 1&1. If your project is successful after a year, you probably can afford to pay more or move the domain. If it isn't - well then you probably don't need that domain anymore. If you know that you want to keep the domain for longer, I would use the Namecheap - they have good prices and very good reviews. Namesilo is a compromise between the other two companies - they are slightly cheaper than Namecheap and have better reviews than 1&1.
-          section.row.u-mt-medium.u-mb-large
+          section.row.mt4.mb6
             .col-sm-12
               h3#files Files storage
               .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
@@ -128,7 +128,7 @@ block content
                     | What is the Glacier Storage?
                   +accordion-body('files-glacier')
                     p Glacier Storage is a good place for storing files that you probably won't need anymore, but you keep them just in case - like backups (maybe not the most fresh backups, but some older ones). Storing files in the Glacier is the cheapest option, but retrieval will be slow (unless you want to pay extra, so instead of waiting for hours, you will wait for few minutes).
-          section.row.u-mt-medium.u-mb-large
+          section.row.mt4.mb6
             .col-sm-12
               h3#cdn CDN (Content Delivery Network)
               .js-faq-accordion.panel-group(role="tablist" aria-multiselectable="true")
