--- a/views/home.pug
+++ b/views/home.pug
@@ -14,7 +14,7 @@ block content
             p.hero__lead DeployStack is a list of the best, hand picked tools and services that you might need when launching a website.
             .hero__buttons.text-center
               .dropdown-relative
-                a.btn.btn-ghost.u-bold.u-no-margin.dropdown-toggle(href="#" data-toggle="dropdown") How to get free... #[b.caret]
+                a.btn.btn-ghost.b.ma0.dropdown-toggle(href="#" data-toggle="dropdown") How to get free... #[b.caret]
                 ul.dropdown-menu.dropdown-menu-right
                   li #[a(href="/#hosting") Hosting]
                   li #[a(href="/#ssl") SSL certificate]
@@ -22,172 +22,44 @@ block content
                   li #[a(href="/#error-tracking") Error tracking]
                   li #[a(href="/#continuous-integration") Continuous integration]
                   li #[a(href="/#static-websites") Static websites hosting]
-              a.btn.btn-ghost.u-bold.u-ml-small(href="/faq#general") How we select tools?
+              a.btn.btn-ghost.b.ml2(href="/faq#general") How we select tools?
             p.hero__disclaimer.text-center Full disclosure: Some of the links are #[a.hero__link(data-toggle="modal", data-target="#affiliations-disclaimer", aria-label="Affiliations disclaimer information") affiliate links]
-  main
-    .main.main-raised
-        .text-center
-          a.anchor--hidden#hosting
-          section.hosting.category
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header Hosting
-                  p Your website needs a home, preferably somewhere in the cloud.<br>
-                    | Check what options you have for different amount of monthly fee (starting from the free option).<br>
-                    | #[a(href="/faq#hosting") Learn more] on why hosting in the cloud is a good solution or what parameters are important.
-              .row.u-mt-medium.text-center
-                .col-sm-12
-                  p Display price:
-                  .togglebutton
-                    label
-                      span.js-switch-label.js-switch-label--alternative Per hour&nbsp;
-                      input.js-price-switch(type="checkbox" checked="" data-target="#hosting-price")
-                      span.js-switch-label.js-switch-label--normal.js-switch-label--active Per month
-              .row.u-mt-medium
-                .col-xs-12
-                  a.anchor--hidden#hosting-table
-                  include includes/home/hosting-table
-          a.anchor--hidden#domain
-          section.domain.category.background-inverse
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header Domain Name
-                  p Your website needs a URL, so people can visit it.<br>
-                    | Check how much different domains cost per year (the common ones like #[em .com] but also the unusual ones like #[em .pizza]).<br>
-                    | #[a(href="/faq#domain") Learn about] what happens if you don't have a domain or the difference between domain providers.
-              include includes/home/domain-table
-          a.anchor--hidden#ssl
-          section.ssl
-            .container
-              .row.u-mb-medium
-                .col-xs-12.col-sm-6
-                  img.analytics-dashboard-img.img-rounded.img-responsive.img-raised(alt="Google analytics dashboard" src=cdn + "/img/letsencrypt_1x.jpg" srcset=cdn + "/img/letsencrypt_1x.jpg 1x, " + cdn + "/img/letsencrypt_2x.jpg 2x")
-                .col-xs-12.col-sm-6
-                  a.anchor--hidden#ssl
-                  h2.category__header SSL certificate
-                  p For a long time, the only way to get an SSL (or TLS) certificate was to pay $30 or more per year. Fortunately, since December 2015, the Internet Security Research Group (ISRG) sponsored by many companies created the #[a(target="_blank", href='https://letsencrypt.org/') Let's Encrypt ] project and now everyone can get SSL certificates for #[strong free]. Go to the #[a(target="_blank", href='https://letsencrypt.org/') Let's Encrypt website ] and check how to install the certificate (they have #[a(target="_blank", href='https://certbot.eff.org/') instructions ] for different operating systems and web servers) or if you are using Ubuntu, check the more detailed, step-by-step tutorials from DigitalOcean (for #[a(target="_blank", href='https://www.digitalocean.com/community/tutorials/how-to-secure-apache-with-let-s-encrypt-on-ubuntu-16-04') Apache ] or #[a(target="_blank", href='https://www.digitalocean.com/community/tutorials/how-to-secure-nginx-with-let-s-encrypt-on-ubuntu-16-04') Nginx]).
-                  div
-                    a.btn.btn-primary.u-bold.u-mx-small(target="_blank", href='https://letsencrypt.org/') Open Let's Encrypt
-          a.anchor--hidden#monitoring
-          section.monitoring.category.background-inverse.background-inverse--deep-purple
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header Monitoring
-                  p You don't need to worry if your website is still working when you sleep.<br>
-                    | There are automatic tools that will check it and notify you when something is wrong (your website is down or has errors).<br>
-                    | Check out the best #[strong free] uptime monitors.
-              include includes/home/monitoring-table
-          a.anchor--hidden#web-analytics
-          section.web-analytics.category
-            .container
-              .row.u-mb-medium
-                .col-xs-12.col-sm-6
-                  h2.category__header Web analytics
-                  p Web analytics tools allow to see how users are interacting with your website. Starting from which browser or device is the most popular, what age are your visitors or how did they find your website, up to the heat maps showing what users clicked or how they moved the mouse.<br>
-                    | For most cases I would recommend using the #[a(target="_blank", href='https://www.google.com/analytics/') Google Analytics ] - it's free but packed with features. If you are concerned about the privacy, you can use #[a(target="_blank", href='https://piwik.org/') Piwik ] - an open source tool, that you can host yourself. Finally, if you have a marketing team that needs more specific reports, there are many advanced, paid solutions (no recommendation here, as everything depends on your specific use case).
-                .col-xs-12.col-sm-6
-                  img.analytics-dashboard-img.img-rounded.img-responsive.img-raised(alt="Google analytics dashboard" src=cdn + "/img/stats_1x.jpg" srcset=cdn + "/img/stats_1x.jpg 1x, " + cdn + "/img/stats_2x.jpg 2x")
-          a.anchor--hidden#files-storage
-          section.files-storage.category.background-inverse
-            .container
-              .row
-                .col-xs-12.col-sm-6
-                  h2.category__header Files storage
-                  p When you ask about files storage, most people will recommend Amazon S3 and there are many good reasons for that. Not only it's one of the cheapest solutions, but it comes with additional benefits. For example, if you are using other parts of the AWS stack, transferring files between S3 and other services in the same region will usually be free (and fast, as all the traffic happens in the same data center). Also, thanks to it's huge popularity, there are plenty of libraries that will help you integrate S3 with basically any other piece of software. Apart from the standard S3 storage, AWS offers two other storage types, for files that you won't access so frequently: #[a(href="/faq#files-infrequent") Infrequent Access Storage] and #[a(href="/faq#files-glacier") Glacier Storage].
-                .col-xs-12.col-sm-6.col-md-5.col-md-offset-1
-                  include includes/home/files-storage-table
-          a.anchor--hidden#cdn
-          section.cdn.category
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header CDN
-                  p When using a Content Delivery Network, all files for your website are distributed in many servers (Points of Presence or PoP) around the world.<br>
-                    | Each time someone visits your website, the CDN will deliver the files from the closest location, making it load faster.<br>
-                    | See some of the available CDN services below or #[a(href="/faq#cdn") read about ] other benefits of using a CDN.
-              include includes/home/cdn-table
-          a.anchor--hidden#error-tracking
-          section.error-tracking.background-inverse.background-inverse--deep-purple
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header Error tracking
-                  p Not all the bugs are caught with tests, so it's important to know when users are seeing errors.<br>
-                    | You can either sift through the logs or use tools for capturing and presenting exceptions in a more readable way.
-              include includes/home/errors-table
-          a.anchor--hidden#emails
-          section.emails
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header Sending emails
-                  p Sooner or later you realize that you need to communicate with users, for example by sending a newsletter from time to time.<br>
-                    | Or, maybe you need to send emails automatically when user performs a specific action (using transactional emails).<br>
-                    | Writing good emails is hard, but sending them for #[strong free] (at least for a small audience) is not, thanks to the following companies.<br>
-                    | Speaking of emails, don't forget to subscribe for DeployStack newsletter #[a(href="#newsletter") at the bottom of the page]!
-              include includes/home/emails-table
-          a.anchor--hidden#version-control
-          section.version-control.background-inverse
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header Version Control
-                  p Online code repositories allow you to share your code with other people and synchronize it between computers.<br>
-                    | Most of them will let you create unlimited public repositories and some of them will also give you free private repositories.<br>
-                    | Check the most popular options below.
-              include includes/home/vc-table
-          a.anchor--hidden#continuous-integration
-          section.continuous-integration
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header Continuous integration
-                  p With continuous integration and deployment, you can automatically run tests and other tasks each time you push code to a git repository.<br>
-                    | And once the tests are passing, the new code can be automatically deployed to production.<br>
-                    | Save yourself the hassle and test/deploy your websites automatically with one of those great tools.
-              include includes/home/ci-table
-          a.anchor--hidden#static-websites
-          section.static-websites.background-inverse
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header Static websites
-                  p When you don't need a backend for your website, you can publish it as a static page.<br>
-                    | It doesn't require a lot of computing resources and many companies will help you for free.<br>
-                    | You can deploy websites straight from the command line or from a git repository.<br>
-                    | If you anticipate adding more features (maybe a database?), check the advanced option.
-              include includes/home/static-table
-          a.anchor--hidden#cloud-computing
-          section.cloud-computing
-            .container
-              .row
-                .col-sm-12
-                  h2.category__header Cloud computing
-                  p Sometimes a simple hosting and a domain are not enough.<br>
-                    | When you need a bunch of different tools, check out the cloud computing companies.<br>
-                    | They may be more expensive, but having all tools in one place is easier (especially if your website grows bigger).<br>
-              include includes/home/cloud-computing
-              .row
-                .col-sm-12.u-mb-medium
-                  small.u-small Cloud computing platforms are complex and hard to compare (they change the list of features and pricing often).<br>
-                    | Based on a specific use case, you will have to pick the best option yourself. Check those articles if you need help choosing: #[a(href="https://www.sitepoint.com/a-side-by-side-comparison-of-aws-google-cloud-and-azure/" target="_blank") Sitepoint], #[a(href="https://news.ycombinator.com/item?id=11515505" target="_blank") Hacker News], #[a(href="http://www.rightscale.com/blog/cloud-cost-analysis/aws-vs-azure-vs-google-cloud-pricing-compute-instances" target="_blank") RightScale].
-          section#newsletter.subscribe.background-inverse.background-inverse--blue
-            .container
-              .row
-                .col-md-8.col-md-offset-2
-                  h3.subscribe__header Subscribe for updates
-                  p.subscribe__description This website will be expanded with new tools and the existing information will be updated (with even better services).<br>
-                    | Join the newsletter and get informed about any major updates (no spam!).
-              .row.text-center
-                .col-md-6.col-md-offset-3
-                  include includes/signup
-          //- End of main-raised
-  //- Modals
-  section.modals
-    include includes/modals/home-modals
-    include includes/modals/hosting-modals
-    include includes/modals/emails-modals
-    include includes/modals/cdn-modals
+  main.blue-background
+    .container
+      .row
+        .col-sm-12.col-md-6.col-lg-4
+          .card.price
+            h3.text-center.mb6 Hosting
+            p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+        .col-sm-12.col-md-6.col-lg-4
+          .card.price
+            h3.text-center.mb6 Domain
+            p Your website needs a URL, so people can visit it. Check how much different domains cost per year (the common ones like .com but also the unusual ones like .pizza).
+        .col-sm-12.col-md-6.col-lg-4
+          .card.price
+            h3.text-center.mb6 SSL certificate
+            p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+        .col-sm-12.col-md-6.col-lg-4
+          .card
+            .card-header
+              h3.text-center Monitoring
+            .card-content
+              p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+        .col-sm-12.col-md-6.col-lg-4
+          .card
+            .card-header
+              h3.text-center Monitoring
+            .card-content
+              p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+        .col-sm-12.col-md-6.col-lg-4
+          .card
+            .card-header
+              h3.text-center Monitoring
+            .card-content
+              p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+        .col-sm-12.col-md-6.col-lg-4
+          .card
+            .card-header
+              h3.text-center Monitoring
+            .card-content
+              p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
