--- a/views/home.pug
+++ b/views/home.pug
@@ -24,42 +24,54 @@ block content
                   li #[a(href="/#static-websites") Static websites hosting]
               a.btn.btn-ghost.b.ml2(href="/faq#general") How we select tools?
             p.hero__disclaimer.text-center Full disclosure: Some of the links are #[a.hero__link(data-toggle="modal", data-target="#affiliations-disclaimer", aria-label="Affiliations disclaimer information") affiliate links]
-  main.blue-background
+  main.bg-blue
     .container
       .row
         .col-sm-12.col-md-6.col-lg-4
-          .card.price
-            h3.text-center.mb6 Hosting
-            p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+          .card
+            .card-header
+              h3.text-center Hosting
+            .card-content
+              p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+              .text-center
+                a.btn.btn-warning(href="/hosting") Hosting
         .col-sm-12.col-md-6.col-lg-4
-          .card.price
-            h3.text-center.mb6 Domain
-            p Your website needs a URL, so people can visit it. Check how much different domains cost per year (the common ones like .com but also the unusual ones like .pizza).
+          .card
+            .card-header
+              h3.text-center Domain
+            .card-content
+              p Your website needs a URL, so people can visit it. Check how much different domains cost per year (the common ones like .com but also the unusual ones like .pizza).
+              .text-center
+                a.btn.btn-warning(href="/domain") Open
         .col-sm-12.col-md-6.col-lg-4
-          .card.price
-            h3.text-center.mb6 SSL certificate
-            p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+          .card
+            .card-header
+              h3.text-center SSL certificate
+            .card-content
+              p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae expedita quae explicabo sed quod dolorem dignissimos neque eius placeat, ad atque saepe eaque.
+              .text-center
+                a.btn.btn-warning(href="/ssl") Check out
         .col-sm-12.col-md-6.col-lg-4
           .card
             .card-header
               h3.text-center Monitoring
             .card-content
-              p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+              p You don't need to worry if your website is still working when you sleep. There are automatic tools that will check it and notify you when something is wrong (your website is down or has errors).
+              .text-center
+                a.btn.btn-warning(href="/monitoring") View
         .col-sm-12.col-md-6.col-lg-4
           .card
             .card-header
-              h3.text-center Monitoring
+              h3.text-center Web analytics
             .card-content
-              p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+              p Web analytics tools allow to see how users are interacting with your website. Starting from which browser or device is the most popular, what age are your visitors or how did they find your website, up to the heat maps showing what users clicked or how they moved the mouse.
+              .text-center
+                a.btn.btn-warning(href="/analytics") Analytics
         .col-sm-12.col-md-6.col-lg-4
           .card
             .card-header
-              h3.text-center Monitoring
+              h3.text-center Files storage
             .card-content
-              p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
-        .col-sm-12.col-md-6.col-lg-4
-          .card
-            .card-header
-              h3.text-center Monitoring
-            .card-content
-              p Your website needs a home, preferably somewhere in the cloud. Check what options you have for different amount of monthly fee (starting from the free option).
+              p When you ask about files storage, most people will recommend Amazon S3 and there are many good reasons for that. Not only it's one of the cheapest solutions, but it comes with additional benefits.
+              .text-center
+                a.btn.btn-warning(href="/analytics") Files storage
