--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,7 +26,8 @@ html(lang="en")
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic%7CMaterial+Icons')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
     //- CSS
-    link(rel='stylesheet', href=cdn + "/css/main.css?v=1.0.3")
+    link(rel='stylesheet', href=cdn + "/css/frameworks.min.css?v=1.0.0")
+    link(rel='stylesheet', href=cdn + "/css/main.min.css?v=1.0.3")
   body
     include includes/header
     block content
